# continuity

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  NOTICE  PROVENANCE.md  README.md  mcp-wrapper.sh  mcp_ping_server.py  pyproject.toml
docs/: DECLARATION_EXPORT_V0.md  MVP_A_SLICE_5_PACKET.md  README.md  ROADMAP.md  concepts.md  integrations.md  scoping.md
docs/candidates/: MAP_SKEW.md  PREDICATE_WITNESS_POINTER.md  PROJECTION_RECEIPT.md  README.md  WLP_PERSISTENCE_ADAPTER.md  WLP_RECEIPT_CUSTODY.md
docs/gaps/: AUTHORING_TIER_UNMIGRATED_READ_GAP.md  CONTINUITY_ORIENT_HOOK.md  CONTINUITY_STORAGE_GAP.md  CONTINUITY_TIME_DISCIPLINE.md  CROSS_COMPONENT_RELIANCE_GAP.md  CROSS_ISLAND_BRIDGES_GAP.md  CROSS_SCOPE_REFERENCE_GAP.md  ISLANDS_OF_CONTINUITY.md  ISLAND_DISCIPLINE.md  README.md  (+6 more)
scripts/: dogfood_phase2.py
tests/: conftest.py  test_artifact_observer.py  test_authoring_tier.py  test_case_bundle.py  test_cli.py  test_consumer_surface_ag.py  test_content_hash.py  test_cross_scope_explain.py  test_cross_scope_import.py  test_dbpath.py  test_declaration_export.py  test_declaration_export_golden.py  test_idempotent_ingest.py  test_islands_refusal.py  test_mcp.py  test_migrate.py  test_observe_commit_revoke.py  test_pinned_premises.py  test_policy_rely_gate.py  test_premise_consistency_doctor.py  test_query_scope.py  test_receipt_chain.py  test_refusal_receipt.py  test_reliance_verify.py  test_repair.py  test_schema.py  test_source_observed_at.py  test_store_metadata.py  test_supersede_pattern.py  test_useful_refusal.py  test_wlp_persistence_adapter.py  test_workspace.py
(+34 files in other folders)
