[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuity"
version = "0.1.0"
description = "Governed state persistence — durable, receipted, scoped memory with observe/commit/rely semantics."
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "James Beck" }]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
